<resources>
    <string name="app_name">HomeWork6.1</string>
    <string name="currencyForSpinner">Currency!</string>
    <string name="hintToInput">input</string>
    <string name="resultWord">Result</string>
    <string name="from">From</string>
    <string name="title">Exchange Money</string>
    <string name="to">To</string>

    <string-array name="animals">
        <item>Cats1</item>
        <item>Cats2</item>
        <item>Cats3</item>
        <item>Cats4</item>
        <item>Cats5</item>
        <item>Cats6</item>
    </string-array>
</resources>

